--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,8 +100,8 @@ p {
 	margin: 7px 2% 0 2%;
 }
 
-.above-article {
-	margin-top: 15px;
+.below-article {
+	margin-top: 30px;
 	padding: 0px 10px 0px 10px;
 	border: thin dotted lighten($text, 50%);
 	border-radius: 8px;
