--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,23 @@ layout: default
 
 <article>
 	<header>
-		<h1 class="article-title">About This Site</h1>
-		<time datetime="2012-02-29" class="article-metadata">2012.02.29</time>
-		<div class="article-metadata">tags: #code, #credits, #php</div>
+		<h1 class="article-title">{{ page.title }}</h1>
+		<time datetime="{{ page.date }}" class="article-metadata">{{ page.date | date_to_string }}</time>
+    {% unless page.tags == empty %}
+      <div class="article-metadata">
+        tags: {% for tag in page.tags %}{{tag}} {% endfor %}
+      </div>
+    {% endunless %}
 	</header>
   {{ content }}
 
-  <div id="related">
-    <h2>Related Posts</h2>
-    <ul class="posts">
-      {% for post in site.related_posts limit:3 %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
 </article>
+
+<div id="related" class="below-article">
+  <h2>Related Posts</h2>
+  <ul class="posts">
+    {% for post in site.related_posts limit:5 %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
