--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,12 @@
     {{ content }}
 
     <footer>
-      <a href="&#x6D;&#x61;&#105;&#108;&#116;&#111;:&#100;&#108;&#109;&#64;&#x64;o&#110;&#x61;l&#100;&#x6D;&#x65;&#x72;&#x61;&#x6E;&#x64;&#x2E;&#x63;&#111;&#x6D;">&#100;&#108;&#109;&#64;&#x64;o&#110;&#x61;l&#100;&#x6D;&#x65;&#x72;&#x61;&#x6E;&#x64;&#x2E;&#x63;&#111;&#x6D;</a>
+      <p><script>
+      <!--
+      h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;';e=n+a+h;
+      document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
+      // -->
+      </script><noscript>&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></p>
       <span class="noprint">
          | <a href="/atom.xml">[rss feed]</a>
       </span>
