--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,13 +19,13 @@
     {{ content }}
 
     <footer>
-      <p><script>
-      <!--
-      h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;';e=n+a+h;
-      document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
-      // -->
-      </script><noscript>&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></p>
       <span class="noprint">
+        <script>
+        <!--
+        h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;';e=n+a+h;
+        document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<code>'+e+'</code>'+'<\/'+'a'+'>');
+        // -->
+        </script><noscript>&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript>
          | <a href="/atom.xml">[rss feed]</a>
       </span>
       <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 License</a>.</p>
