changed arrows to rarr;

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,10 @@
   <title>{{ page.title}}</title>
   <link rel="alternate" type="application/atom+xml" title="Donald L. Merand" href="atom.xml">
   <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/assets/css/style.css" media="all" />
-  <link rel="stylesheet" href="/assets/css/syntax.css" media="all" />
-  <link rel="stylesheet" href="/assets/css/print.css" media="print" />
+  <link rel="stylesheet" href="/assets/css/style.css" media="all" >
+  <link rel="stylesheet" href="/assets/css/syntax.css" media="all" >
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Merriweather:900,300' media="all">
+  <link rel="stylesheet" href="/assets/css/print.css" media="print" >
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         </script><noscript>&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript>
        | <a href="/atom.xml">[rss feed]</a>
       </span>
-      <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 License</a>.</p>
+      <p>Copyright Donald L. Merand (unless otherwise specified).</p>
     </footer>
   </div><!-- page -->
 </body>
