--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,11 +16,11 @@ layout: default
 
 </article>
 
-<div id="related" class="below-article">
+<div id="related" class="noprint below-article">
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> &rarr; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
