--- a/assets/css/print.scss
+++ b/assets/css/print.scss
@@ -2,38 +2,38 @@ body {
 	background: #FFFFFF;
 }
 
-$base_font_size: 10pt;
+$base-font-size: 10pt;
 
 .noprint { display: none; }
 .donald { 
-	font-size: $base_font_size + 4;
+	font-size: $base-font-size + 4;
 	color: #464443;
 }
 .article-title {
-	font-size: $base_font_size + 10pt;
+	font-size: $base-font-size + 10pt;
 	margin-bottom: 40px;
 }
 .page { 
-	font-size: $base_font_size; 
+	font-size: $base-font-size; 
 	width: 75%;
 }
 h1 {
-	font-size: $base_font_size + 8pt;
+	font-size: $base-font-size + 8pt;
 }
 
 h2 {
-	font-size: $base_font_size + 4pt;
+	font-size: $base-font-size + 4pt;
 }
 
 h3 {
-	font-size: $base_font_size;
+	font-size: $base-font-size;
 }
 textarea, pre {
-	font-size: $base_font_size - 2pt;
+	font-size: $base-font-size - 2pt;
 }
 ul, ol {
-	font-size: $base_font_size;
+	font-size: $base-font-size;
 }
 footer {
-	font-size: $base_font_size - 2;
+	font-size: $base-font-size - 2;
 }
