--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -1,1 +1,1 @@
-body{background:#FFFFFF}.noprint{display:none}.donald{font-size:14pt;color:#464443}.article-title{font-size:20pt;margin-bottom:40px}.page{font-size:10pt;width:75%}h1{font-size:18pt}h2{font-size:14pt}h3{font-size:10pt}textarea,pre{font-size:8pt}ul,ol{font-size:10pt}footer{font-size:8pt}
+body{background:#FFFFFF;font-size:15px;line-height:24px}h1{font-size:24px;line-height:38.4px}.donald{color:#464443}.article-title{margin-bottom:40px;font-size:24px;line-height:38.4px}.page{width:75%}.noprint{display:none}
