--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,18 +7,17 @@ $page-width: 800px;
 
 /* got to have this for relative widths annd heights */
 body, html {
-	width: 100%;
 	height: 100%;
 	margin: 0;
+	width: 100%;
 }
 
 body {
 	background: $background;
 	color: $text;
-
 	font-family: $base-font-family;
-  font-weight: $base-font-weight;
   @include set-font(1);
+  font-weight: $base-font-weight;
 }
 
 article img {
@@ -36,9 +35,9 @@ footer {
 
 
 a {
-	text-decoration: none;
-	color: $link;
 	&:hover { color: lighten($link, 25%); }
+	color: $link;
+	text-decoration: none;
 }
 
 $header-margin: 45px;
@@ -46,61 +45,64 @@ $header-margin: 45px;
 h1, h2, h3, h4, h5, h6 { font-weight: $font-weight-heavy; }
 
 h1 {
-  margin-top: $header-margin;
   @include set-font(2);
+  margin-top: $header-margin;
 }
 
 h2 {
-  margin-top: $header-margin * 2/3;
   @include set-font(1);
+  margin-top: $header-margin * 2/3;
 }
 
 h3 {
-  margin-top: $header-margin * 1/3;
   @include set-font(0);
+  margin-top: $header-margin * 1/3;
 }
 
-textarea, pre {
-  padding: $base-padding;
+code {
+  @include set-font(0);
+  padding: $base-padding / 4;
+  border: thin solid darken($background, 25%);
+  background: darken($background, 5%);
+}
+
+pre {
   @include set-font(-1);
 }
-
 
 /* CUSTOM PAGE ELEMENTS FOLLOW */
 
 /* top of the header */
 .donald {
-	width: 100%; /* of the body */
-
 	background: $text;
 	color: $background;
-
-  @include set-font(3);
 	text-align: center;
+	width: 100%; /* of the body */
+  @include set-font(3);
 
 	a { color: $background; }
 }
 
 /* all content is contained in the page */
 .page {
-	width: $page-width;
 	height: auto;
 	margin: 0 auto;
+	width: $page-width;
 }
 
 /* there are four of these in a row in the top NAV */
 .context {
 	float: left;
-	width: 21%;  /* of the page */
 	margin: 7px 2% 0 2%;
+	width: 21%;  /* of the page */
 }
 
 .below-article {
+	background: darken($background, 2%);
+	border-radius: 8px;
+	border: thin dotted lighten($text, 50%);
 	margin-top: 30px;
 	padding: 0px 10px 0px 10px;
-	background: darken($background, 2%);
-	border: thin dotted lighten($text, 50%);
-	border-radius: 8px;
 
 	p, h1 {
 		margin: 10px 0px 10px 0px;
@@ -110,34 +112,33 @@ textarea, pre {
 /* the title of the selected item */
 .article-title {
 	margin: 40px 0 20px 0;
-
+	text-align: center;
   @include set-font(3);
   font-weight: normal;
-	text-align: center;
 }
 
 /* info such as date, author, tags, etc. */
 .article-metadata {
-	font-style: oblique;
 	color: lighten($text, 30%);
+	font-style: oblique;
 }
 
 /* generic - anything that's been selected */
 .selected {	
-	font-weight: bold;
 	color: $selected;
+	font-weight: bold;
 }
 
 .half-left {
-	width: 48%;
 	float:left;
+	width: 48%;
 }
 
-.oblique { font-style: oblique; }
 .center { text-align: center; }
-.right { float: right; }
 .left { float: left; }
+.oblique { font-style: oblique; }
 .pad-right { padding-right: 20px; }
+.right { float: right; }
 
 /* just here to fix any floatin' */
 .clf { clear: both; }
