updated to include Internet Defense League logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+  <!-- Internet Defense League Banner -->
+  <div style="position:fixed;right:0;bottom:0">
+    <a href="http://internetdefenseleague.org" target="_blank"><img src="http://internetdefenseleague.org/images/badges/final/banner_right.png" alt="Member of The Internet Defense League" width="50px" ></a>
+  </div>
+
   <div class="donald"><a href="/index.html">Donald L. Merand</a></div>
   <div class="page">
 
