update styling, brute convert to tachyons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,20 +5,13 @@
   <meta charset="utf-8">
   <meta name="author" content="Donald L. Merand">
   <title>{{ page.title}}</title>
-  <link rel='alternate' type='application/atom+xml' title='Donald L. Merand' href='atom.xml'>
-  <link rel='shortcut icon' href='/favicon.ico'>
-  <link rel='stylesheet' href='/assets/css/style.css' media='all' >
-  <link rel='stylesheet' href='/assets/css/plugins/syntax.css' media='all' >
-  <link rel='stylesheet' href='/assets/css/print.css' media='print' >
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Merriweather:900,300' media='all'>
+  <link rel="alternate" type="application/atom+xml" title="Donald L. Merand" href="atom.xml">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/assets/css/tachyons.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css" media="all" >
 </head>
 
-<body>
-  <!-- Internet Defense League Banner -->
-  <div style="position:fixed;right:0;bottom:0">
-    <a href="http://internetdefenseleague.org" target="_blank"><img src="http://internetdefenseleague.org/images/badges/final/banner_right.png" alt="Member of The Internet Defense League" width="50px" ></a>
-  </div>
-
+<body class="w-100 measure-wide-l pa3 pa4-ns athelas f4 bg-near-white black">
   <div class="donald"><a href="/index.html">Donald L. Merand</a></div>
   <div class="page">
 
