--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,6 @@ layout: default
 <article>
 	<header>
 		<h1 class="article-title">{{ page.title }}</h1>
-		<time datetime="{{ page.date }}" class="article-metadata">{{ page.date | date_to_string }}</time>
     {% unless page.tags == empty %}
       <div class="article-metadata">
         tags: {% for tag in page.tags %}{{tag}} {% endfor %}
@@ -20,7 +19,7 @@ layout: default
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> &rarr; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
