more style updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Donald L. Merand">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title}}</title>
   <link rel="alternate" type="application/atom+xml" title="Donald L. Merand" href="atom.xml">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/assets/css/tachyons.min.css">
-  <link rel="stylesheet" href="/assets/css/style.css" media="all" >
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
-<body class="w-100 measure-wide-l pa3 pa4-ns athelas f4 bg-near-white black">
+<body class="w-100 w-two-thirds-l pl4 pa3 pa4-ns athelas f3 bg-near-white black">
   <div class="donald"><a href="/index.html">Donald L. Merand</a></div>
   <div class="page">
 
     {{ content }}
 
-    <footer>
-      <span class="noprint">
+    <footer class="mt4 f6">
+      <div>
         <script type="text/javascript">
           <!--
           h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;';e=n+a+h;
@@ -26,8 +27,8 @@
           // -->
         </script><noscript>&#100;&#x6d;&#x65;&#114;&#x61;&#110;&#100;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript>
        | <a href="/atom.xml">[rss feed]</a>
-      </span>
-      <p>Copyright Donald L. Merand (unless otherwise specified).</p>
+      </div>
+      <div>Copyright Donald L. Merand (unless otherwise specified).</div>
     </footer>
   </div><!-- page -->
 
