--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ code {
 .donald {
   color: #464443; }
 
-.noprint {
-  display: none; }
+@media print {
+  .noprint {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
