--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,20 +4,19 @@ layout: default
 
 <article>
 	<header>
-		<h1 class="article-title">{{ page.title }}</h1>
+		<h1 class="mt4 mb2 lh-title measure-wide">{{ page.title }}</h1>
     {% unless page.tags == empty %}
-      <div class="article-metadata">
+      <div class="mv2 gray">
         tags: {% for tag in page.tags %}{{tag}} {% endfor %}
       </div>
     {% endunless %}
 	</header>
-  {{ content }}
-
+  <div class="measure-wide lh-solid">{{ content }}</div>
 </article>
 
-<div id="related" class="noprint below-article">
+<div id="related" class="noprint mt4">
   <h2>Related Posts</h2>
-  <ul class="posts">
+  <ul class="list pa0">
     {% for post in site.related_posts limit:5 %}
       <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
