--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@import "{{ site.theme }}";
+
 a {
   color: #5E2CA5;
   text-decoration: none;
@@ -11,8 +16,16 @@ code {
   font-size: 1rem;
 }
 
-.donald { 
-	color: #464443;
+h1 {
+  margin-top: 2rem;
+  margin-bottom: .5rem;
 }
 
-.noprint { display: none; }
+h2 {
+  margin-top: 1rem;
+  margin-bottom: .25rem;
+}
+
+@media print {
+  .noprint { display: none; }
+}
