--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,14 @@ h2 {
   margin-bottom: .25rem;
 }
 
+li {
+  margin-top: .5rem;
+}
+
+ul, ol {
+  padding-left: 1.5rem;
+}
+
 @media print {
   .noprint { display: none; }
 }
