font size change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
-<body class="pl4-l pa3 pa4-ns athelas f3 bg-near-white black">
+<body class="pl4-l pa3 pa4-ns athelas f5 f4-ns bg-near-white black">
   <div class="donald"><a href="/index.html">Donald L. Merand</a></div>
   <div class="page">
 
