new article, slight style update, added resume

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,8 @@
 a {
-  color: #5E2CA5;
-  text-decoration: none;
+  color: #137752;
 }
 a:hover {
-  color: #A463F2;
+  color: #19A974;
 }
 
 code {
