--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article>
 	<header>
-		<h1 class="mt4 mb2 lh-title measure-wide">{{ page.title }}</h1>
+		<h1 class="mt4 mb2 f3 f2-ns lh-title measure-wide">{{ page.title }}</h1>
     {% unless page.tags == empty %}
       <div class="mv2 gray">
         tags: {% for tag in page.tags %}{{tag}} {% endfor %}
