update gems, update styling a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,9 @@
         }
         //-->
         </script>
-        | <a href="/atom.xml">[rss feed]</a>
+        <span class="noprint">
+           | <a href="/atom.xml">[rss feed]</a>
+        </span>
       </div>
       <div>Copyright Donald L. Merand (unless otherwise specified).</div>
     </footer>
