--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,12 +11,14 @@ code {
 }
 
 h1 {
-  margin-top: 2rem;
+  font-size: 1.5rem;
+  margin-top: 3rem;
   margin-bottom: .5rem;
 }
 
 h2 {
-  margin-top: 1rem;
+  font-size: 1.25rem;
+  margin-top: 2.25rem;
   margin-bottom: .25rem;
 }
 
