--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,19 +4,19 @@ layout: default
 
 <article>
 	<header>
-		<h1 class="mt4 mb2 f3 f2-ns lh-title measure-wide">{{ page.title }}</h1>
+		<h1 class="mt4 mb2 f3 f2-ns lh-title">{{ page.title }}</h1>
     {% unless page.tags == empty %}
       <div class="mv2 gray">
         tags: {% for tag in page.tags %}{{tag}} {% endfor %}
       </div>
     {% endunless %}
 	</header>
-  <div class="measure-wide lh-title">{{ content }}</div>
+  <div class="mt5 measure-wide lh-title">{{ content }}</div>
 </article>
 
-<div id="related" class="noprint mt4">
+<div id="related" class="noprint mt5">
   <h2>Related Posts</h2>
-  <ul class="list pa0 ma0">
+  <ul class="mt3 list pa0 ma0">
     {% for post in site.related_posts limit:5 %}
       <li class="mv0"><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
