--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,13 @@ code {
   font-size: 1rem; }
 
 h1 {
-  margin-top: 2rem;
+  font-size: 1.5rem;
+  margin-top: 3rem;
   margin-bottom: .5rem; }
 
 h2 {
-  margin-top: 1rem;
+  font-size: 1.25rem;
+  margin-top: 2.25rem;
   margin-bottom: .25rem; }
 
 li {
