add links to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,25 @@
 
     {{ content }}
 
-    <footer class="mt4 f6">
-      <div>
+    <footer class="mt5">
+      <div class="noprint flex-l mt3 mt0-l lh-solid lh-copy-l">
+        <div class="w4">_more_</div>
+        <div class="flex-ns mt1 mt0-l">
+          <div>
+            <a href="https://floating-beyond-56119.herokuapp.com/" target="moments">Catalog of Moments</a>
+          </div>
+          <div class="ml3-ns">
+            <a href="https://github.com/dmerand" target="github">Code</a>
+          </div>
+          <div class="ml3-ns">
+            <a href="https://micro.blog/dlm" target="dlm">MicroBlog</a>
+          </div>
+          <div class="ml3-ns">
+            <a href="https://thingiverse.com/dmerand" target="things">Things</a>
+          </div>
+        </div>
+      </div>
+      <div class="mt3 f6">
         <script type="text/javascript" language="javascript">
         <!--
         // Email obfuscator script 2.1 by Tim Williams, University of Arizona
@@ -49,7 +66,7 @@
            | <a href="/atom.xml">[rss feed]</a>
         </span>
       </div>
-      <div>Copyright Donald L. Merand (unless otherwise specified).</div>
+      <div class="mt1 f6">Copyright Donald L. Merand (unless otherwise specified).</div>
     </footer>
   </div><!-- page -->
 </body>
