slight template update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="mt3 f6">
+      <div class="noprint mt3 f6">
         <script type="text/javascript" language="javascript">
         <!--
         // Email obfuscator script 2.1 by Tim Williams, University of Arizona
