--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,21 +4,21 @@ layout: default
 
 <article>
 	<header>
-		<h1 class="mt4 mb2 f3 f2-ns lh-title">{{ page.title }}</h1>
+		<h1>{{ page.title }}</h1>
     {% unless page.tags == empty %}
-      <div class="mv2 gray">
+      <div class="text-base text-slate-500">
         tags: {% for tag in page.tags %}{{tag}} {% endfor %}
       </div>
     {% endunless %}
 	</header>
-  <div class="mt4 measure-wide lh-title">{{ content }}</div>
+  <div class="mt-10">{{ content }}</div>
 </article>
 
-<div id="related" class="noprint mt5">
+<div id="related" class="noprint mt-20">
   <h2>Related Posts</h2>
-  <ul class="mt3 list pa0 ma0">
+  <ul class="my-0">
     {% for post in site.related_posts limit:5 %}
-      <li class="mv0"><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li class="my-0"><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
