Add changelog, clean tooling, adjust save button

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -630,6 +630,10 @@ video {
   margin-top: 2rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -754,6 +758,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-body {
